fixing layout issue, login out page setting issue

--- a/src/app/pages/admin/admin.component.css
+++ b/src/app/pages/admin/admin.component.css
@@ -1,4 +1,3 @@
-/* Admin Header */
 .admin-header {
   display: flex;
   justify-content: space-between;
@@ -10,11 +9,11 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1100; /* Ensure the header stays on top */
+  z-index: 1100; 
 }
 
 .admin-header h1 {
-  margin: 0;
+  margin: 0 2.5rem;
   font-size: 1.8rem;
 }
 
@@ -30,13 +29,13 @@
   background-color: #457b9d;
 }
 
-/* General Admin Layout */
+
 .admin-container {
   display: flex;
   height: 100vh;
   flex-direction: row;
   overflow: hidden;
-  padding-top: 60px; /* Ensure space for header */
+  padding-top: 60px; 
 }
 
 .nav-bar {
@@ -44,7 +43,7 @@
   background-color: #457b9d;
   padding: 2rem;
   position: fixed;
-  top: 60px; /* Adjust navbar position below the header */
+  top: 60px; 
   left: 0;
   height: calc(100% - 60px);
   color: white;
@@ -70,7 +69,7 @@
   background-color: #4a5568;
 }
 
-/* Main content area */
+
 .main-content {
   margin-left: 250px;
   padding: 2rem;
@@ -80,18 +79,17 @@
   transition: margin-left 0.3s ease;
 }
 
-/* Mobile / Tablet View: Responsive adjustments */
 @media (max-width: 768px) {
   .admin-container {
     flex-direction: column;
-    padding-top: 80px; /* Adjust for header space */
+    padding-top: 80px;
   }
 
   .nav-bar {
     width: 250px;
     height: 100%;
     position: fixed;
-    top: 80px; /* Adjust position below header on mobile */
+    top: 80px; 
     left: -250px;
     transition: left 0.3s ease;
     z-index: 1000;
@@ -117,7 +115,7 @@
     display: block;
     cursor: pointer;
     position: fixed;
-    top: 1rem;
+    top: 0rem;
     left: 1rem;
     font-size: 2rem;
     color: white;
